clusters/openshift/apps/home/wyze-bridge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wyze-bridge
  namespace: wyze-bridge
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
  hostnames:
  - wyze-bridge.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: wyze-bridge
      port: 5000
      weight: 1
